--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon server"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "global": "^4.4.0",
+    "heroku": "^7.54.1",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
