--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -16,6 +17,6 @@
     "nodemon": "^2.0.7"
   },
   "engines": {
-    "node": "14.x"
+    "node": ">=10.0.0"
   }
 }
