--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://admin:ogbonnaj@cluster0.qsi5n.mongodb.net/smecrm
+MONGODB_URI=mongodb+srv://admin:admin@cluster0.b61mz.mongodb.net/smecrm
