--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "dev": "nodemon server"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "global": "^4.4.0",
     "heroku": "^7.54.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1"
   },
   "engines": {
     "node": ">=10.0.0"
